<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
    android:layout_height="match_parent"



    android:orientation="vertical">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:background="@drawable/fone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp">

    <TextView android:text="@string/title_calculete" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView3"
        android:layout_marginTop="118dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="10dp"
        android:layout_alignParentTop="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ok"
        android:id="@+id/button2"
        android:onClick="onClick"
        android:background="@drawable/bgb"
        android:layout_below="@+id/hours"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="73dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/manth_salary"
        android:hint="@string/Manth_salary1"
        android:layout_below="@+id/textView3"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/day"
        android:layout_below="@+id/manth_salary"
        android:layout_alignRight="@+id/manth_salary"
        android:layout_alignEnd="@+id/manth_salary"
        android:layout_marginTop="40dp"
        android:hint="@string/Manth_day"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/hours"
        android:layout_below="@+id/day"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="48dp"
        android:hint="@string/day_hour"
        android:layout_alignRight="@+id/day"
        android:layout_alignEnd="@+id/day"
        />
        </RelativeLayout>
    </ScrollView>


</RelativeLayout>
