<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="tk.site_guru.asasecond.recommendations"
    >
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:background="@drawable/fone">



    <TextView android:text="@string/recommendations" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/recomend"
        android:layout_marginTop="167dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ok"
        android:id="@+id/button4"
        android:onClick="onClick"

        android:background="@drawable/bgb"

        android:layout_marginTop="58dp"
        android:layout_marginLeft="42dp"
        android:layout_marginStart="42dp"
        android:layout_below="@+id/room"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reboot"
        android:id="@+id/button5"
        android:onClick="onClick_ref"
        android:padding="10dp"
        android:background="@drawable/bgb"
        android:layout_alignTop="@+id/button4"
        android:layout_alignRight="@+id/room"
        android:layout_alignEnd="@+id/room"
        android:layout_marginRight="43dp"
        android:layout_marginEnd="43dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/room"
        android:hint="@string/room"
        android:inputType="number"
        android:layout_below="@+id/baks"
        android:layout_alignRight="@+id/recomend"
        android:layout_alignEnd="@+id/recomend"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/baks"
        android:hint="@string/baks"
        android:inputType="number"
        android:layout_below="@+id/recomend"
        android:layout_marginTop="57dp"
        android:layout_alignRight="@+id/room"
        android:layout_alignEnd="@+id/room"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>
